# Microbit_Tokio

./: .gitignore  Cargo.toml  deny.toml  microbit-tokio.code-workspace  rust-toolchain.toml
.claude/: settings.json
.github/workflows/: ci.yml
firmware/: Cargo.toml  build.rs  memory.x
firmware/.cargo/: config.toml
firmware/src/: board.rs  buttons.rs  led.rs  main.rs  sensor.rs  state.rs  uart.rs
shared/: Cargo.toml
shared/src/: frame.rs  lib.rs
shared/tests/: protocol.rs
web/: Cargo.toml
web/src/: flash.rs  main.rs  serial.rs  web_server.rs
web/static/: index.html
