[workspace]
resolver = "2"
members = ["shared", "firmware", "web"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""

[profile.release]
opt-level = "s"      # size: nRF52833 = 512KB flash, экономим (Ch.11 "Doing More with Less")
lto = "fat"
codegen-units = 1
debug = 2           
