[package]
name = "firmware"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" } # no_std, default features

embassy-executor = { version = "0.6", features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-nrf = { version = "0.2", features = [
    "nrf52833",       # target MCU (micro:bit V2.2.1 schematic p.3 "Target MCU")
    "time-driver-rtc1",
    "gpiote",
] }
embassy-time = { version = "0.3" }

# critical-section-single-core: реализация critical-section через PRIMASK
# (запрет прерываний на 1 ядре, Ch.5). Без неё линковка падает на
# _critical_section_1_0_acquire.
# inline-asm НЕ включаем: в cortex-m 0.7.7 asm предкомпилирован, а фича
# ломается на новом rustc (unknown register r0 / __basepri_r).
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.3"
