[package]
name = "firmware"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" } # no_std, default features

embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m", # было arch-cortex-m; в 0.10 фичи переименованы в platform-*
    "executor-thread",
] }
embassy-nrf = { version = "0.11.0", features = [
    "nrf52833",       # target MCU (micro:bit V2.2.1 schematic p.3 "Target MCU")
    "time-driver-rtc1",
    "gpiote",
] }
embassy-time = { version = "0.5.1" }

# critical-section-single-core: реализация critical-section через PRIMASK
# (запрет прерываний на 1 ядре, Ch.5). Без неё линковка падает на
# _critical_section_1_0_acquire.
# inline-asm НЕ включаем: в cortex-m 0.7.7 asm предкомпилирован, а фича
# ломается на новом rustc (unknown register r0 / __basepri_r).
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.1.0"
defmt-rtt = "1.2.0"
