[package]
name = "web"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "web"

[dependencies]
shared = { path = "../shared", features = ["std"] } # std-мир

tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
axum = "0.8.9"
tower-http = { version = "0.7.0", features = ["fs"] } # отдать static/index.html
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
